# cracon

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  flawfinder.yml  msvc.yml
examples/: basic_usage.cpp  group_param_usage.cpp
examples/cmake_add_subfolder/: CMakeLists.txt  main.cpp
examples/cmake_cpm_example/: CMakeLists.txt  main.cpp
include/cracon/: cracon.hpp  log.hpp  similarity_traits.hpp
include/flacon/: flacon.hpp  similarity_traits.hpp
src/: cracon.cpp  flacon.cpp
test/: file_test.cpp  group_test.cpp  is_similar_test.cpp  static_test_data.json
